2014-04-13  Andy Buckley  <andy.buckley@cern.ch>

	* Renumberings of several MRST and MSTW sets's global IDs:
	    MRST2004qed_proton 20461->20463
	    MRST2004qed_neutron 20462->20465
	    MSTW2008lo90cl 21041->21050
	    MSTW2008nlo90cl 21141->21150
	    MSTW2008nnlo90cl 21241->21250
	    MSTW2008lo90cl_nf3 23041->23050
	    MSTW2008lo90cl_nf4 23141->23150
	    MSTW2008nlo90cl_nf3 23241->23250
	    MSTW2008nlo90cl_nf4 23341->23350
	    MSTW2008nnlo90cl_nf3 23541->23550
	    MSTW2008nnlo90cl_nf4 23641->23650

	* Updates to the CONFIGFLAGS documention, removing some unused
	flags and adding the new Note flag.

	* Printing out a Note metadata entry on set initialization, if one is found.

	* Removing the metadata() functions from Info, since they were
	unused and did not respect the cascading design.

2014-03-25  Andy Buckley  <andy.buckley@cern.ch>

	* More tweaking of the uncertainty function behaviour.

	* Adding in_range, in_open_range, in_closed_range functions.

2014-03-24  Andy Buckley  <andy.buckley@cern.ch>

	* Removing compatibility auto-cast of PDFUncertainty to
	vector<double>, converting remaining functions to use the struct,
	rationalising the previously split uncertainty() implementation,
	and code tidying.

	* Converting the uncertainty functions to add a no-copy version
	and to return a new struct rather than a vector<double>.

2014-03-23  Andy Buckley  <andy.buckley@cern.ch>

	* Moving new uncertainty functions into a new PDFSet.cc file to keep header clean.

	* Removing now unnecessary cmake check from configure and the docs.

2014-03-19  Andy Buckley  <andy.buckley@cern.ch>

	* Convert lhapdf-yaml-cpp building to use libtool, avoiding
	linking portability issues. Re-enable static library building
	since the necessary symbols now seem to be present (and the
	libtool warning has also disappeared).

2014-03-16  Andy Buckley  <andy.buckley@cern.ch>

	* Disable static library build for now, until we can figure out