@@ -21,6 +21,10 @@ namespace LHAPDF {
 
 
   double BilinearInterpolator::_interpolateXQ2(const KnotArray1F& subgrid, double x, size_t ix, double q2, size_t iq2) const {
+    if (subgrid.logxs().size() < 2)
+      throw GridError("PDF subgrids are required to have at least 2 x-knots for use with BilinearInterpolator");
+    if (subgrid.logq2s().size() < 2)
+      throw GridError("PDF subgrids are required to have at least 2 Q2-knots for use with BilinearInterpolator");
     // First interpolate in x
     const double f_ql = _interpolateLinear(x, subgrid.xs()[ix], subgrid.xs()[ix+1], subgrid.xf(ix, iq2), subgrid.xf(ix+1, iq2));
     const double f_qh = _interpolateLinear(x, subgrid.xs()[ix], subgrid.xs()[ix+1], subgrid.xf(ix, iq2+1), subgrid.xf(ix+1, iq2+1));
